# oci-image-java-distroless-debian-mount-s3

./: MODULE.bazel  README.md
mount-s3/: README.md  aarch64.bzl  deps.lock.json  deps.yaml
src/: BUILD  README.md  Runner.java  bootstrap.sh
